\encoding{UTF-8}

\section{Changes in version 0.1-3}{
  \itemize{
    \item Fix for \code{makeContent()} methods for picRect, picPath,
    and picPolyline, so that the forced grob has the same name
    as the original grob.

    \item Fix for parsing \code{<symbol>} element with no children or
    with empty image.

    \item Fix for import of \code{lwd} from SVG \code{line-width}
  }
}
\section{Changes in version 0.1-2}{
  \itemize{
    \item Fix for importing rotated rectangles.

    \item Fix for importing rotated raster images.

    \item Improved import of line widths.

    \item Enhancement of importing patterns to allow general pattern
    content, rather than just a single image as pattern content.
  }
}
\section{Changes in version 0.1-1}{
  \itemize{
    \item Fix for 'default.units' argument in grid.picture(), which was
    being ignored.
    
    \item Fix to grobify() method for \code{"PictureImage"} to correct
    location calculation for raster element (was doing incorrect
    unit arithmetic).
    
    \item Fix to parseSVGUse() to handle direct <use> of image
    (not for a pattern or mask, but for an actual image);  problem
    was that image was not positioned correctly.
    
    \item Fix to pictureVP() to handle inverted x-scale or y-scale;
    problem was evident in incorrect overall clipping (because pictureVP()
    was incorrect shape).
    
    \item Fix to path parsing to handle path data of the form
    \code{d="M x y"} (by ignoring such paths).

    \item Bug fix for converting SVG style to gpar settings
    when style is a url() reference (it was doing the wrong thing
    to replace, for example, \code{gp$fill} with
    \code{gp$gradientFill} and could end up with neither).

    \item Bug fix for <path> with 'transform' and 'fill' that is url()
    reference.  The transform was not being applied to the referenced
    gradient fill.  
  }
}
\section{Changes in version 0.1-0}{
  \itemize{
