@@ -1,8 +1,8 @@
 Package: grImport2
 Version: 0.1-3
 Depends: R (>= 2.12.0)
-Imports: methods, grid, XML, png, jpeg, base64enc
-Suggests: gridSVG, grConvert, grImport, lattice, cluster, colorspace, survival
+Imports: methods, grDevices, grid, XML, png, jpeg, base64enc
+Suggests: gridSVG, rsvg
 Title: Importing Vector Graphics
 Authors@R: c(person("Simon", "Potter", role = c("aut", "cre"),
                     email = "simon.potter@auckland.ac.nz"),
