@@ -30,23 +30,39 @@ checkValidSVG <- function(doc, minVersion = NA, warn = TRUE) {
         return()
     # Note: suppressing warnings because we know we just want comments
     # and do not care about the namespace (SVG) that they belong in
-    grConvertComment <-
-        suppressWarnings(getNodeSet(doc, "//comment()"))
-    warningText <- 
-        "This picture was not generated by the 'grConvert' package, errors may result"
-    if (! length(grConvertComment) ||
-        ! grepl("Created by grConvert", xmlValue(grConvertComment[[1]])))
+    comments <- suppressWarnings(getNodeSet(doc, "//comment()"))
+    grConvertSVG <- length(comments) &&
+        grepl("Created by grConvert", xmlValue(comments[[1]]))
+    if (grConvertSVG) {
+        cairoSVG <- TRUE
+        ## Future proofing on grConvert input, add a min version check on
+        ## the output that grConvert creates.
+        if (! is.na(minVersion)) {
+            grConvertComment <- xmlValue(grConvertComment[[1]])
+            ## Collect the version number (of the form v0.1-0, for example)
+            fileVersion <-
+                gsub(".*v([0-9.-]+) $", "\\1", grConvertComment, perl = TRUE)
+            if (package_version(fileVersion) < package_version(minVersion))
+                warning(paste0("This picture was generated by an old version ",
+                               " of 'grConvert'. ",
+                               "The minimum supported version is ",
+                               minVersion,". Errors may result"))
+        }
+    } else {
+        topGroup <- getNodeSet(doc, "/svg:svg/svg:g[1]",
+                               namespaces=c(svg="http://www.w3.org/2000/svg"))
+        if (length(topGroup)) {
+            groupAttrs <- xmlAttrs(topGroup[[1]])
+        } else {
+            groupAttrs <- NULL
+        }
+        cairoSVG <- length(groupAttrs) && "id" %in% names(groupAttrs) &&
+            grepl("^surface", groupAttrs["id"])
+    }
+    
+    if (!cairoSVG) {
+        warningText <- 
+        "This picture was not generated by Cairo graphics; errors may result"
         warning(warningText)
-    # Future proofing on grConvert input, add a min version check on
-    # the output that grConvert creates.
-    if (! is.na(minVersion)) {
-        grConvertComment <- xmlValue(grConvertComment[[1]])
-        # Collect the version number (of the form v0.1-0, for example)
-        fileVersion <-
-            gsub(".*v([0-9.-]+) $", "\\1", grConvertComment, perl = TRUE)
-        if (package_version(fileVersion) < package_version(minVersion))
-            warning(paste0("This picture was generated by an old version of 'grConvert'. ",
-                           "The minimum supported version is ", minVersion,". ",
-                           "Errors may result"))
     }
 }
