@@ -12,6 +12,12 @@
     with empty image.
 
     \item Fix for import of \code{lwd} from SVG \code{line-width}
+
+    \item Relax import requirement that SVG file be generated by
+    \pkg{grConvert};  now accept SVG file that is generated by
+    \pkg{grConvert} OR SVG file that can be identified as being
+    generated by Cairo graphics.  This allows us to accept, for example,
+    files generated by \code{rsvg_svg()} from the \pkg{rsvg} package.
   }
 }
 \section{Changes in version 0.1-2}{
